fix(input-dropdown): z-index overwrapping on other inputs

--- a/docs/assets/styles/variables/z-indexes.css
+++ b/docs/assets/styles/variables/z-indexes.css
@@ -2,8 +2,9 @@
   --z-index-sidebar: 1000;
   --z-index-header: 1100;
   --z-index-footer: 1100;
-  --z-index-screen: 2000;
-  --z-index-backdrop: 3000;
-  --z-index-modal: 3010;
-  --z-index-snackbar: 4000;
+  --z-index-dropdown: 2000;
+  --z-index-screen: 3000;
+  --z-index-backdrop: 4000;
+  --z-index-modal: 4010;
+  --z-index-snackbar: 5000;
 }
